Added theme definitions to get demo working.
Change-Id: I2aa5d8cef60179e879764da93b7c10f67603879b

--- a/app/index.html
+++ b/app/index.html
@@ -66,8 +66,9 @@
     <div class="theme-toggle">
       <select id="theme-selector">
         <option value="default">Default</option>
-        <option value="sunset">Sunset</option>
-        <option value="beach">Beach</option>
+        <option value="desert">Desert</option>
+        <option value="rainbow">Rainbow</option>
+        <option value="aqua">Aqua</option>
       </select>
     </div>
 
