Updated readme with installation instructions; code updates after presentation.
Change-Id: I1204240ddd0ca4e4575c08d5268de8fa2adb8043

--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
     <div class="theme-toggle">
       <select id="theme-selector">
         <option value="default">Default</option>
+        <option value="royale">Royale</option>
         <option value="desert">Desert</option>
         <option value="rainbow">Rainbow</option>
         <option value="aqua">Aqua</option>
